FIND_PACKAGE(GTest REQUIRED)

INCLUDE_DIRECTORIES(
	${GTest_INCLUDE_DIR}
)

ADD_EXECUTABLE(run_tests main.cpp lua_sandbox_test.cpp)

TARGET_LINK_LIBRARIES(run_tests
	lua_sandbox
	${GTEST_LIBRARIES}
)

ADD_CUSTOM_COMMAND(OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/lua"
	COMMAND cmake -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/lua
	$<TARGET_FILE_DIR:run_tests>/lua
	DEPENDS  "${CMAKE_CURRENT_SOURCE_DIR}/lua/*")

ADD_CUSTOM_TARGET(test
  COMMAND run_tests
  DEPENDS run_tests ${CMAKE_CURRENT_BINARY_DIR}/lua
  WORKING_DIRECTORY "${CMAKE_BINARY_DIR}")
